components/security/authentik/outpost.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   labels:
#     app.kubernetes.io/instance: traefik
#     app.kubernetes.io/name: authentik-outpost
#   name: authentik-outpost-api
#   namespace: authentik
# type: Opaque
# stringData:
#   AUTHENTIK_HOST: "https://authentik.${auth_domain}"
#   AUTHENTIK_INSECURE: "true"
#   AUTHENTIK_TOKEN: "Cocxik9prquYvQrjt9qcn2mRkSXRZ5BOy846UJ8w52NaZwdtLupVrbWpd4iY"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app.kubernetes.io/instance: traefik
#     app.kubernetes.io/name: authentik-outpost
#   name: authentik-outpost
#   namespace: authentik
# spec:
#   ports:
#     - name: http
#       port: 9000
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 9443
#       protocol: TCP
#       targetPort: https
#   type: ClusterIP
#   selector:
#     app.kubernetes.io/instance: traefik
#     app.kubernetes.io/name: authentik-outpost
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app.kubernetes.io/instance: traefik
#     app.kubernetes.io/name: authentik-outpost
#   name: authentik-outpost
#   namespace: authentik
# spec:
#   selector:
#     matchLabels:
#       app.kubernetes.io/instance: traefik
#       app.kubernetes.io/name: authentik-outpost
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/instance: traefik
#         app.kubernetes.io/name: authentik-outpost
#     spec:
#       containers:
#         - image: ghcr.io/goauthentik/proxy:2026.2
#           name: proxy
#           ports:
#             - containerPort: 9000
#               name: http
#               protocol: TCP
#             - containerPort: 9443
#               name: https
#               protocol: TCP
#           envFrom:
#             - secretRef:
#                 name: authentik-outpost-api
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: authentik-outpost
  name: authentik-outpost
  namespace: authentik
spec:
  ingressClassName: traefik
  rules:
    - host: sso.${auth_domain}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-traefik
                # name: authentik-outpost
                port:
                  name: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik
  namespace: authentik
spec:
  forwardAuth:
    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
    address: https://sso.${auth_domain}/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version
        - authorization
